# midgard-core

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Doxyfile.in  INSTALL.ru  Makefile.am  MgdObjects.xml  MidgardObjects.xml  NEWS  README  README.attachmenthost  README.quota  README.ru  autogen.sh  configure.ac  configure.in  midgard-config.in  midgard-cr.h  midgard2.pc.in  midgard3.pc.in  midgard_auth_types.xml  midgard_dbus.conf  midgard_initial_database.xml  midgardcr.pc.in  sitegroup.sql  travis_midgard.sh  vala_regenerate.sh
doc/: autogen.sh  configure.ac  midgard2-architecture.graffle
doc/C/: Makefile.am  howto-compile-midgard-app.xml  howto-compile-midgard-lib.xml  howto-get-midgard-lib.xml  midgard-2.0-docs.sgml  midgard-2.0-sections.txt  midgard-2.0.types  midgard2-architecture.xml
doc/C/examples/: hello_world.xml  midgard_connection.xml
doc/C/tmpl/: guid.sgml  midgard-2.0-unused.sgml  midgard.sgml  midgard_blob.sgml  midgard_collector.sgml  midgard_config.sgml  midgard_config_auto.sgml  midgard_connection.sgml  midgard_dbobject.sgml  midgard_error.sgml  midgard_metadata.sgml  midgard_object.sgml  midgard_object_attachment.sgml  midgard_object_class.sgml  midgard_object_parameter.sgml  midgard_quota.sgml  midgard_reflection_property.sgml  midgard_reflector_property.sgml  midgard_replicator.sgml  midgard_request.sgml  midgard_request_config.sgml  midgard_schema.sgml  midgard_sitegroup.sgml  midgard_storage.sgml  midgard_timestamp.sgml  midgard_transaction.sgml  midgard_tree.sgml  midgard_type.sgml  midgard_user.sgml  midgard_view.sgml  query_builder.sgml  uuid.sgml
src/core/: Makefile.am  MidgardCRCore.vapi  MidgardCore.vapi  midgard3.h  midgard_core_config.c  midgard_core_config.h  midgard_cr_core.h  midgard_cr_core_config.c  midgard_cr_core_config.h  midgard_cr_core_guid.c  midgard_cr_core_guid.h  midgard_cr_core_md5.c  midgard_cr_core_md5.h  midgard_cr_core_object_builder.c  midgard_cr_core_object_builder.h  midgard_cr_core_query_constraint.c  midgard_cr_core_query_constraint.h  midgard_cr_core_query_constraint_group.c  midgard_cr_core_query_constraint_group.h  midgard_cr_core_query_constraint_simple.c  midgard_cr_core_query_constraint_simple.h  midgard_cr_core_query_executor.c  midgard_cr_core_query_executor.h  midgard_cr_core_query_holder.c  midgard_cr_core_query_holder.h  midgard_cr_core_query_private.c  midgard_cr_core_query_private.h  midgard_cr_core_query_property.c  midgard_cr_core_query_property.h  midgard_cr_core_query_select.c  midgard_cr_core_query_select.h  midgard_cr_core_query_storage.c  midgard_cr_core_query_storage.h  midgard_cr_core_query_value.c  midgard_cr_core_query_value.h  midgard_cr_core_schema_builder.c  midgard_cr_core_schema_builder.h  midgard_cr_core_schema_object.c  midgard_cr_core_schema_object.h  midgard_cr_core_sql_storage_content_manager.c  (+17 more)
src/vala/: Makefile.am  Makefile.in  MidgardCR-3.0.vapi  config.vala  executable.vala  midgard_config.c  midgard_config.vala  midgard_executable.vala  midgard_namespace.vala  midgard_profiler.vala  midgard_query.vala  midgard_schema_model.vala  midgard_schema_model_reflector.vala  midgard_schema_object.vala  midgard_storage.vala  midgard_storage_manager_sql.vala  midgard_workspace.vala  model.vala  namespace.vala  object_builder.vala  object_manager.vala  object_model.vala  object_property_model.vala  profiler.vala  query.vala  query_property.vala  query_value.vala  queue.vala  rdf_generic_object.vala  rdf_mapper_object.vala  rdf_mapper_property.vala  rdf_sql_content_manager.vala  rdf_sql_model_manager.vala  rdf_sql_namespace_manager.vala  rdf_sql_object_manager.vala  rdf_sql_query_manager.vala  rdf_sql_query_select.vala  rdf_sql_query_storage.vala  rdf_sql_storage_manager.vala  rdf_storage_manager.vala  (+26 more)
src/vala/examples/: Makefile.am  activity.vala  configure.in  example1.vala  example2.vala  example3.vala  (+4 more)
tests/: Makefile.am  autogen.sh  configure.ac  midgard_test.c  midgard_test.h  midgard_test_config.c  midgard_test_config.h  midgard_test_connection.c  midgard_test_connection.h  midgard_test_database.c  midgard_test_database.h  midgard_test_database_provider.c  midgard_test_database_provider.h  midgard_test_error.c  midgard_test_error.h  midgard_test_metadata.c  midgard_test_metadata.h  midgard_test_object.h  midgard_test_object_basic.c  midgard_test_object_basic.h  midgard_test_object_class.c  midgard_test_object_class.h  midgard_test_object_fetch.c  midgard_test_object_fetch.h  midgard_test_object_tree.c  midgard_test_object_tree.h  midgard_test_object_workspace.c  midgard_test_object_workspace.h  midgard_test_property_reflector.c  midgard_test_property_reflector.h  midgard_test_query_builder.c  midgard_test_query_builder.h  midgard_test_reflector_object.c  midgard_test_reflector_object.h  midgard_test_replicator.c  midgard_test_replicator.h  midgard_test_replicator_import.c  midgard_test_replicator_import.h  midgard_test_schema_object_factory.c  midgard_test_schema_object_factory.h  (+27 more)
tests/GIR/: bookstorequery.py  runalltests.py  test_000_config.py  test_001_connection.py  test_003_storage.py  test_004_object_crud.py  test_005_object_metadata.py  test_006_user.py  test_007_blob.py  test_008_reflector_object.py  test_009_reflector_property.py  test_010_workspace_manager.py  test_011_attachments.py  test_012_object_tree.py  test_020_connection.py  test_030_storage.py  test_1000_workspace_manager.py  test_100_object_crud.py  test_110_object_metadata.py  test_120_object_attachments.py  test_130_object_tree.py  test_200_user.py  test_220_blob.py  test_300_reflector_object.py  test_300_storage.py  test_310_reflector_property.py  test_400_object_crud.py  test_400_workspace_manager.py  test_401_workspace.py  test_402_workspace_context.py  test_411_object_in_workspace.py  test_412_object_in_workspace_context.py  test_500_object_metadata.py  test_510_object_attachments.py  test_520_object_tree.py  test_600_user.py  test_700_blob.py  test_800_reflector_object.py  test_850_reflector_property.py  test_900_object_reference.py  (+17 more)
tests/Node/: midgard_connection.js  test_storage.js
(+353 files in other folders)
